<resources>
    <string name="app_name">DayTastic</string>
    <string name="title_home">Home</string>
    <string name="title_calender">Calender</string>
    <string name="title_notifications">Notifications</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="temperture">Temperture</string>
    <string name="rain_chance">Rain Chance</string>
    <string name="condition">Condition</string>
    <string name="event_name">Event Name</string>
    <string name="date">Date</string>
    <string name="duration">duration</string>
    <string name="type">type</string>
    <string name="start">Start:</string>
    <string name="event_name_">Event Name:</string>
    <string name="end">End:</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="notify">Notify:</string>
    <string name="new_event">New Event</string>
    <string name="event_color">Event Color</string>
    <string name="start_time_end_time">Start time - End time</string>
    <string name="alarm_type">Alarm Type</string>
</resources>