<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calender.CalendarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_prev"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                app:iconGravity="end"
                app:iconSize="30dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="true"
                android:contentDescription="@string/previous"
                app:icon="@drawable/outline_arrow_circle_left_24" />

            <TextView
                android:id="@+id/monthYearTV"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="Feb 2021"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                app:iconGravity="start"
                app:iconSize="30dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="true"
                android:contentDescription="@string/next"
                app:icon="@drawable/outline_arrow_circle_right_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sun"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mon"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tue"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wed"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thur"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fri"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sat"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="16sp"/>


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>