<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?attr/colorSurfaceContainerLow"
            android:layout_marginBottom="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_prev"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                app:iconGravity="end"
                app:iconSize="@dimen/_25sdp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="true"
                android:contentDescription="@string/previous"
                app:icon="@drawable/outline_arrow_circle_left_24" />

            <TextView
                android:id="@+id/monthYearTV"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="Feb 2021"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                app:iconGravity="start"
                app:iconSize="@dimen/_25sdp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="true"
                android:contentDescription="@string/next"
                app:icon="@drawable/outline_arrow_circle_right_24" />

        </LinearLayout>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_70sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/_8sdp"
            android:background="?attr/colorSurfaceContainer"
            android:orientation="vertical">
        <LinearLayout
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:elevation="@dimen/_2sdp"
            android:background="?attr/colorSurfaceContainerHigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sun"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mon"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tue"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wed"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thur"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fri"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sat"
                android:textAlignment="center"
                android:textSize="16sp"/>


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>