<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp">
        <TextView
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:layout_weight="1"
            android:labelFor="@id/event_name_et"
            android:text="@string/event_name_" />

        <EditText
            android:id="@+id/event_name_et"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:autofillHints="event_names"
            android:ems="10"
            android:layout_gravity="end"
            android:textSize="@dimen/_15sdp"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp">
        <TextView
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:layout_weight="1"
            android:text="@string/start"
            android:labelFor="@id/start_time_button"/>

        <Button
            android:id="@+id/start_time_button"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/start_time"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp">
        <TextView
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:layout_weight="1"
            android:text="@string/end"
            android:labelFor="@id/end_time_button"/>

        <Button
            android:id="@+id/end_time_button"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/end_time"
            android:textSize="20sp"/>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify"
            android:textSize="@dimen/_15sdp"
            android:layout_weight="1"
            >
        </TextView>

        <RadioButton
            android:id="@+id/alarmRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alarm" />

        <RadioButton
            android:id="@+id/notificationRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Notification" />

        <RadioButton
            android:id="@+id/noneRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="None" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp">
        <TextView
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:layout_weight="1"
            android:text="Alarm before:"
            android:labelFor="@id/end_time_button"/>

        <Spinner
            android:id="@+id/alarmTimeBeforeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:textSize="20sp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/color_picker_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Event Color:"
            android:textSize="@dimen/_15sdp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center|bottom"
        android:layout_weight="1"
        android:layout_margin="@dimen/_10sdp">

        <Button
            android:id="@+id/save_button"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="20sp"
            android:layout_marginEnd="@dimen/_3sdp"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:text="@string/cancel"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
