<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventListItemLL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorTertiaryContainer"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/circleView"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/simple_circle"
            android:contentDescription="@string/event_color" />

        <TextView
            android:id="@+id/eventNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_weight="1"
            android:text="@string/event_name"
            android:textSize="@dimen/_20ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteEventBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            app:icon="@drawable/baseline_delete_24"
            app:iconSize="@dimen/_30sdp"
            app:iconGravity="end"
            android:background="@android:color/transparent"
            app:iconTint="?attr/colorError"
            android:contentDescription="Delete Event" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/durationTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="@string/start_time_end_time"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/alarmTypeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="end"
            android:text="@string/alarm_type"
            android:textSize="@dimen/_14ssp"
            app:drawableStartCompat="@drawable/baseline_access_alarm_24" />
    </LinearLayout>

</LinearLayout>